--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://bd253998-d91a-4afc-a57c-227c34500887.preview.emergentagent.com
 WDS_SOCKET_PORT=443
